# mancala

./: .gitignore  README.md  create-xdc.sh  index.html  lookahead-worker.js  manifest.toml  manifest.webmanifest  package-lock.json  package.json  pwa-sw.js  start-server.sh  test.js  webxdc.js
mancala-solver/: Cargo.toml  build.sh
mancala-solver/src/: lib.rs
screenshots/: readme-screenshots.js  readme-screenshots.sh  screenshot.js  screenshot.sh
