[package]
name = "mancala-solver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
